[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querysmith"
version = "0.1.0"
description = "MCP-powered MongoDB query diagnostics and V1 optimization workbench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "pymongo>=4.6.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
querysmith = "querysmith.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["querysmith"]
